# kitty-rainbow-trail

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  current-theme.conf.example  kitty.conf  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
src/kitty_starter/: __init__.py  cli.py  greeting.py  kitty_remote.py
src/rainbow_trail/: __init__.py  cli.py  color_wheel.py  kitty_remote.py
tests/: test_cli_e2e.py  test_color_wheel.py  test_greeting.py
