[project]
name = "kitty-rainbow-trail"
version = "0.0.1"
description = "A flying, jumping, rainbow-cycling cursor trail for the kitty terminal."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Oleg Koval" }]
keywords = ["kitty", "terminal", "cursor", "rainbow", "kitten"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.scripts]
rainbow-trail = "rainbow_trail.cli:main"

[project.urls]
Homepage = "https://github.com/oleg-koval/kitty-rainbow-trail"
Issues = "https://github.com/oleg-koval/kitty-rainbow-trail/issues"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.7",
  "ty>=0.0.1a1",
  "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rainbow_trail"]

# ---- Ruff: lint + format -----------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "B",        # bugbear
  "UP",       # pyupgrade
  "N",        # pep8-naming
  "SIM",      # simplify
  "RUF",      # ruff-specific
  "C90",      # mccabe complexity
  "PLR",      # pylint refactor (too-many-statements, too-many-branches)
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-statements = 50
max-branches = 12

[tool.ruff.format]
quote-style = "double"

# ---- pytest ------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=src --cov-report=term-missing"

# ---- ty (type checker) -------------------------------------------
[tool.ty.src]
include = ["src"]
